# aravis-camera-interface

./: CMakeLists.txt  Makefile  README.md  camera.cpp  camera.h  config.h  hdcamera.cpp  hdcamera.h  main.cpp
modules/: Findaravis.cmake
src/: CMakeLists.txt  LICENSE  Makefile  camerafeatures.xml  config.h  hdcamera.cpp  hdcamera.h  imagedownlinker.cpp  imagedownlinker.h  main.cpp
src/downlink/: packetinterface.cpp  packetinterface.h  packetinterface.hpp  packetmanager.cpp  packetmanager.h
src/simulation/: Makefile  membuffersimulator.cpp  membuffersimulator.h
tst/: CMakeLists.txt  Makefile  membuffersimulatortest.cpp  test_2.cpp  test_camera_feature_io.cpp  test_packet_downlink.cpp  testmain.cpp
